# AQI-forecasting

./: .env  README.md  hello.py  pyproject.toml  requirements.txt
